<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientContact_Fragment">

    <EditText
        android:id="@+id/editTextTextPersonDescription2"
        android:layout_width="335dp"
        android:layout_height="53dp"
        android:background="@drawable/btn_drawable_two"
        android:drawableLeft="@drawable/ic_baseline_description_25"
        android:ems="10"
        android:hint="@string/description_hnt"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="335dp"
        android:layout_height="53dp"
        android:background="@drawable/btn_drawable_two"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/username_hnt"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonDescription2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintVertical_bias="0.553" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="335dp"
        android:layout_height="53dp"
        android:background="@drawable/btn_drawable_two"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/email_hnt"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="217dp"
        android:layout_height="68dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/menu_contact"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075"
        tools:text="@string/menu_contact" />

    <Button
        android:id="@+id/loginSndBtn2"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_drawable_one"
        android:text="@string/txt_utls_send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />
</androidx.constraintlayout.widget.ConstraintLayout>